Fix logo image filename to lowercase

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </style>
 </head>
 <body>
-  <img src="Logo.png" alt="Logo SustentArte" class="logo" />
+  <img src="logo.png" alt="Logo SustentArte" class="logo" />
 
   <div class="creditos">© SustentArte 2025</div>
 
