--- a/login.html
+++ b/login.html
@@ -309,7 +309,7 @@
 <script type="module">
   import { createClient } from 'https://esm.sh/@supabase/supabase-js@2';
 
-  const supabase = createClient('https://TEU_PROJECT_ID.supabase.co', 'SUA_PUBLIC_ANON_KEY');
+  const supabase = createClient('https://afobiejrsjolurxeqnuz.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFmb2JpZWpyc2pvbHVyeGVxbnV6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI1NTkxMDAsImV4cCI6MjA3ODEzNTEwMH0.dhHgjXnOzZE5f3HDBzgBjuZss33LrGPuM1ckKeG6-bw');
 
   const link = document.getElementById('esqueciSenhaLink');
   const box = document.getElementById('resetBox');
