Fix title case and update password reset URL

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Login - SustentArte</title>
+<title>LogiN - SustentArte</title>
 <style>
   hr.divider {
   margin: 18px 0;
@@ -330,8 +330,9 @@
       return;
     }
     const { error } = await supabase.auth.resetPasswordForEmail(email, {
-      redirectTo: window.location.origin + '/nova-senha.html'
+      redirectTo: "https://sr-junkie.github.io/SustentArte/#/nova-senha.html"
     });
+
     if(error){
       alert('Erro ao enviar e-mail: ' + error.message);
     }else{
