Enhance success message with email validation info
Updated success message to include email validation instruction.

--- a/cadastro.html
+++ b/cadastro.html
@@ -300,7 +300,7 @@
       return;
     }
 
-    mostrarMensagem(msgSucesso, 'Conta criada com sucesso! Redirecionando...');
+    mostrarMensagem(msgSucesso, 'Conta criada com sucesso! Redirecionando... Acesse o e-maio e valide a conta.');
     setTimeout(() => window.location.href = 'login.html', 2500);
   });
 </script>
